--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@ body.offcanvas #fh5co-aside {
   background: #fff;
   z-index: 999;
   position: fixed;
+  overflow-y:auto;
 }
 body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
   top: 0;
