--- a/css/style.css
+++ b/css/style.css
@@ -1116,4 +1116,11 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
   opacity: 0;
 }
 
+@media screen and (max-width: 768px) {
+  .fh5co-lead {
+    font-size: 19px;
+    line-height: 1.5;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
