--- a/css/style.css
+++ b/css/style.css
@@ -1132,7 +1132,7 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
 }
 
 #itemsDescription {
-  margin-left: -2px;
-  margin-right: -12px;
+  margin-left: -2px !important;
+  margin-right: -12px !important;
 }
 /*# sourceMappingURL=style.css.map */
