--- a/css/style.css
+++ b/css/style.css
@@ -1135,4 +1135,8 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
   margin-left: -2px !important;
   margin-right: -12px !important;
 }
+
+#subjectSection {
+  margin-left: 29px;
+}
 /*# sourceMappingURL=style.css.map */
