--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,11 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
     padding: 10px 8px;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  #teamGithub {
+    text-align: left;
+  }
+}
 .fh5co-social li a:hover {
   color: #da1212;
 }
